syntax = "proto3";

package account;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/turistikrota/service.account/protos/account";

message Entity {
  string uuid = 1;
  string user_uuid = 2;
  string user_name = 3;
  string full_name = 4;
  string description = 5;
  bool is_active = 6;
  int32 completed_rate = 7;
  bool is_deleted = 8;
  bool is_verified = 9;
  google.protobuf.Timestamp birth_date = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

message UserUnique {
  string uuid = 1;
  string name = 2;
 }

message AccountListByIdsResult {
  repeated Entity entities = 1;
}

service AccountService {
  rpc GetAccountListByIds (GetAccountListByIdsRequest) returns (AccountListByIdsResult);
}

message GetAccountListByIdsRequest {
  repeated UserUnique users = 1;
}
